--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,7 +6,7 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = "0.13.1"
+bevy = { version = "0.13.1", features = ["dynamic_linking"] }
 bevy_egui = "0.26.0"
 image = "0.25.0"
 rand = "0.8.5"
