--- a/Cargo.toml
+++ b/Cargo.toml
@@ -6,8 +6,12 @@ edition = "2021"
 # See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
 
 [dependencies]
-bevy = { version = "0.13.1", features = ["dynamic_linking"] }
-bevy_egui = "0.26.0"
+bevy = { version = "0.13.1" }
+bevy_egui = { version = "0.26.0", default-features = false, features = [
+    "open_url",
+    "default_fonts",
+    "render",
+] }
 image = "0.25.0"
 rand = "0.8.5"
 winit = "0.29.15"
