--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,6 +12,7 @@ bevy_egui = { version = "0.26.0", default-features = false, features = [
     "default_fonts",
     "render",
 ] }
+bevy_kira_audio = "0.19.0"
 image = "0.25.0"
 rand = "0.8.5"
 
