--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,6 +7,7 @@ edition = "2021"
 
 [dependencies]
 bevy = { version = "0.13.1" }
+bevy_asset_loader = "0.20.0"
 bevy_egui = { version = "0.26.0", default-features = false, features = [
     "open_url",
     "default_fonts",
