--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,6 +13,7 @@ bevy_egui = { version = "0.26.0", default-features = false, features = [
     "default_fonts",
     "render",
 ] }
+bevy_embedded_assets = "0.10.2"
 bevy_kira_audio = "0.19.0"
 image = "0.25.0"
 rand = "0.8.5"
